# metadata-harmonizer

./: .gitignore  README.md  RELEASE-NOTES.md  erddap_config.py  generator.py  metadata_report.py  pyproject.toml  requirements.txt
examples/06/: meta.yaml
src/digi4eco_metadata_harmonizer/: dataset_generator.py  report.py
src/digi4eco_metadata_harmonizer/metadata/: __init__.py  digi4eco.py  metadata_templates.py  tests.py  waterframe.py
tests/: docker-compose.yaml  test_metadata_harmonizer.py
