
[build-system]
# A list of packages that are needed to build your package:
requires = ["setuptools>=61.0"]
# The name of the Python object that frontends will use to perform the build:
build-backend = "setuptools.build_meta"  # If not defined, then legacy behavior can happen.


[project]

name = "digi4eco-metadata-harmonizer"  # REQUIRED, is the only field that cannot be marked as dynamic.
version = "0.1"
description = " Toolbox for creating/assessing DIGI4ECO-compliant NetCDF datasets and integrate them into ERDDAP services"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
keywords = ["emso", "metadata", "setuptools", "development", "erddap"]

authors = [
  {name = "Enoc Martínez", email = "enoc.martinez@upc.edu" }
]

maintainers = [
  {name = "Enoc Martínez", email = "enoc.martinez@upc.edu" }
]

classifiers = [
  # How mature is this project? Common values are
  #   3 - Alpha
  #   4 - Beta
  #   5 - Production/Stable
  "Development Status :: 4 - Beta",

  # Indicate who your project is intended for
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Build Tools",
  # Pick your license as you wish
  "License :: OSI Approved :: MIT License",

  # Specify the Python versions you support here. In particular, ensure
  # that you indicate you support Python 3. These classifiers are *not*
  # checked by "pip install". See instead "requires-python" key in this file.
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3 :: Only",
]

# This field lists other packages that your project depends on to run.
# Any package you put here will be installed by pip when your project is
# installed, so they must be valid existing projects.
#
# For an analysis of this field vs pip's requirements files see:
# https://packaging.python.org/discussions/install-requires-vs-requirements/
dependencies = [
	"certifi>=2024.6.2",
	"cfchecker>=4.1.0",
	"cftime>=1.6.4",
	"cfunits>=3.3.7",
	"charset-normalizer>=3.3.2",
	"et-xmlfile>=1.1.0",
	"future>=1.0.0",
	"idna>=3.7",
	"lxml>=5.2.2",
	"markdown-it-py>=3.0.0",
	"mdurl>=0.1.2",
	"netCDF4>=1.7.1",
	"numpy>=2.0.0",
	"openpyxl>=3.1.4",
	"packaging>=24.1",
	"pandas>=2.2.2",
	"pyaml>=25.7.0",
	"Pygments>=2.18.0",
	"python-dateutil>=2.9.0.post0",
	"pytz>=2024.1",
	"PyYAML>=6.0.3",
	"requests>=2.32.3",
	"rich>=13.7.1",
	"six>=1.16.0",
	"tzdata>=2024.1",
	"urllib3>=2.2.2",
	"xarray>=2024.6.0"
]

[project.urls]
"Homepage" = "https://github.com/EnocMartinez/stadb"
"Source" = "https://github.com/EnocMartinez/stadb"


[tool.setuptools]